# GA_3DBPP

./: .gitignore  10  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  REVIEW_PLAN.md
data/: Dataset1000.csv
data/test_fixtures/: empty_data.csv  malformed_dims.csv  missing_cols.csv  valid_small.csv
docs/architecture/: algorithm-flowchart.md  class-struct-relations.md  file-dependencies.md  function-calls.md  json-schema.md
docs/misc/: newfrontend.md  pallet-reg-change.md  standard-pallet-sizes.md
docs/project-phases/: phase-0-summary.md  phase-1-summary.md  phase-2-summary.md  phase-3-summary.md  phase-4-summary.md  phase-5-summary.md  phase-6-summary.md  phase-7-summary.md  phase-8-summary.md  phase-9-summary.md
include/: AABB.h  AnimatedSolution.h  BRReader.h  BenchmarkRunner.h  BlockBuilder.h  CSVReader.h  CenterOfMass.h  Config.h  ExtremePointEngine.h  GeneticOperators.h  Hausdorff.h  JSONWriter.h  LayerGenerator.h  Logger.h  NSGA2.h  Packer.h  PalletRegistry.h  SupportChecker.h  Types.h
output/: br2_test.json  solution.json  solution_animated.json  test_regression.json
server/: server.py  start.sh
src/: BRReader.cpp  BenchmarkMain.cpp  BenchmarkRunner.cpp  BlockBuilder.cpp  CSVReader.cpp  CenterOfMass.cpp  ExtremePointEngine.cpp  GeneticOperators.cpp  Hausdorff.cpp  JSONWriter.cpp  LayerGenerator.cpp  Logger.cpp  NSGA2.cpp  Packer.cpp  PalletRegistry.cpp  SupportChecker.cpp  main.cpp
test/: test_aabb.cpp  test_com.cpp  test_csv.cpp  test_extreme_points.cpp  test_hausdorff.cpp  test_integration.cpp  test_io.cpp  test_json_schema.py  test_layers.cpp  test_main.cpp  test_nsga2.cpp  test_support.cpp  test_types.cpp
visualization/: index.html
visualization/css/: styles.css
visualization/js/: app.js  controls.js  layerPanel.js  phase1Animator.js  renderer.js  worker.js
